--- a/app/src/main/res/layout/item_uni_list.xml
+++ b/app/src/main/res/layout/item_uni_list.xml
@@ -9,18 +9,18 @@
     <LinearLayout
         android:id="@+id/contactitem_layout"
         android:layout_width="match_parent"
-
         android:layout_height="65.0dip"
+        android:orientation="vertical"
         android:padding="2dp"
-        android:paddingLeft="12dip"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:weightSum="1">
 
         <RelativeLayout
             android:id="@+id/avatar_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginTop="4dp">
+            android:layout_alignParentLeft="true">
 
             <TextView
                 android:id="@+id/storePic"
@@ -30,12 +30,18 @@
             <TextView
                 android:id="@+id/storeName"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/storePic"
-                android:gravity="center"
+                android:gravity="center_vertical"
+                android:textSize="22sp"
+                android:textColor="@color/black"
                 android:text="No data" />
         </RelativeLayout>
 
+        <TextView
+            android:background="@color/gray"
+            android:layout_width="match_parent"
+            android:layout_height="1px" />
     </LinearLayout>
 
 </LinearLayout>
